# mozart2-libmozart-experiment

./: CMakeLists.txt  README.md  customlib.hh  datatypes-decl.hh  datatypes.hh  interfaces-decl.hh  interfaces.hh  libmozart-experiments.kdev4  main.cc
